syntax="proto3";

package proto;

option go_package = "./; Upload";

service UploadService{
	rpc UploadEntry(ReqEntry)returns(RespEntry){}
}

message ReqEntry{

}

message RespEntry{
	int32 code = 1;
	string message = 2;
	string entry = 3;
}